ElasticsearchKibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch-kibana
  labels:
    app: elasticsearch-kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch-kibana
  template:
    metadata:
      labels:
        app: elasticsearch-kibana
    spec:
      containers:
      - name: elasticsearch-kibana
        image: sebp/elk
        ports:
        - containerPort: 5601
        - containerPort: 9200
        volumeMounts:
        - name: elasticsearch-persistent-storage
          mountPath: /var/lib/elasticsearch
      volumes:
      - name: elasticsearch-persistent-storage
        persistentVolumeClaim:
          claimName: elasticsearch-claim
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
spec:
  ports:
  - port: 9200
    targetPort: 9200
  selector:
    app: elasticsearch-kibana
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
spec:
  ports:
  - port: 5601
    targetPort: 5601
  selector:
    app: elasticsearch-kibana
  type: LoadBalancer
