Grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: grafana
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: grafana
  name: grafana
spec:
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - image: grafana/grafana:6.1.4
        name: grafana
        volumeMounts:
        - name: grafana-persistent-storage
          mountPath: /var/lib/grafana
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
      volumes:
      - name: grafana-persistent-storage
        persistentVolumeClaim:
          claimName: grafana-claim
